--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,24 +1,29 @@
-﻿<Window x:Class="_205704Unit2Summative.MainWindow"
+﻿<!--Aidan McClung
+    April 20, 2020
+    A program to edit and save contact info from text files.-->
+    <Window x:Class="_205704Unit2Summative.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_205704Unit2Summative"
         mc:Ignorable="d"
-        Height="350" Width="525"
-        Title="Kontacts" FontFamily="Candara" Icon="https://cdn1.iconfinder.com/data/icons/andriod-app-logo/32/icon_k-512.png"
+        Height="350" Width="575"
+        Title="Kontacts" FontFamily="Candara" Icon="https://github.com/MysticalWarrior/205704Unit2Summative/blob/master/KontactIcon.png?raw=true"
         Closing="Window_Closing" WindowStartupLocation="CenterScreen" BorderBrush="DarkSlateGray">
     <Window.Resources>
         <!--sets the styling for the headers-->
         <Style x:Key="HeaderStyle" TargetType="DataGridColumnHeader">
-            <Setter Property="Background" Value="LightSlateGray"/>
+            <Setter Property="Background" Value="DimGray"/>
             <Setter Property="Height" Value="20"/>
             <Setter Property="FontFamily" Value="Candara"/>
-            <Setter Property="Margin" Value="2"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="1"/>
         </Style>
     </Window.Resources>
 
-    <DockPanel>
+    <DockPanel Background="Firebrick">
         <Menu DockPanel.Dock="Top" FontFamily="Candara" Background="SlateGray">
             <MenuItem Header="_File">
                 <!-- Sub tags can be accessed by clicking [alt -> F -> o/s] -->
@@ -26,7 +31,6 @@
                 <MenuItem x:Name="menuSave" Click="menuSave_Click" Header="_Save Contacts"/>
             </MenuItem>
             <!-- For a reason I have not yet discovered, menuitems with a command are unclickable...
-            
             <MenuItem Header="_File">
                 <MenuItem x:Name="menuOpen2" Click="menuOpen_Click" Header="_Open Contacts" Command="ApplicationCommands.Open"/>
                 <MenuItem x:Name="menuSave2" Click="menuSave_Click" Header="_Save Contacts" Command="ApplicationCommands.Save"/>
@@ -35,7 +39,8 @@
                 <MenuItem Command="ApplicationCommands.Copy"/>
                 <MenuItem Command="ApplicationCommands.Cut"/>
                 <MenuItem Command="ApplicationCommands.Paste"/>
-            </MenuItem>-->
+            </MenuItem>
+            -->
             <MenuItem x:Name="menuAdd" Click="menuAdd_Click" Header="_Add Contact"/>
             <MenuItem x:Name="menuShowAge" Click="menuShowAge_Click" Header="Find Age"/>
             <MenuItem x:Name="Help" Header="_Help" Click="Help_Click"/>
@@ -43,14 +48,16 @@
 
         <Grid DockPanel.Dock="Bottom">
             <DataGrid x:Name="dgEditor" CanUserDeleteRows="True" SelectionMode="Single" HeadersVisibility="Column" AutoGenerateColumns="False"
-                      RowBackground="LightGray" AlternatingRowBackground="Gray" ColumnHeaderStyle="{DynamicResource HeaderStyle}" Grid.ColumnSpan="2">
+                      RowBackground="LightGray" AlternatingRowBackground="Gray" ColumnHeaderStyle="{DynamicResource HeaderStyle}" 
+                      BorderBrush="Black" Background="DarkGray">
+                <!--In order to customize header titles from variable names, I stopped it from making them automatically and made my own.-->
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header=" First Name" Binding="{Binding firstName}"/>
-                    <DataGridTextColumn Header="Last Name" Binding="{Binding lastName}"/>
-                    <DataGridTextColumn Header="Birthday: Year" Binding="{Binding yearBorn}"/>
-                    <DataGridTextColumn Header="Month" Binding="{Binding monthBorn}"/>
-                    <DataGridTextColumn Header="Day" Binding="{Binding dayBorn}"/>
-                    <DataGridTextColumn Header="Email Address" Binding="{Binding email}"/>
+                    <DataGridTextColumn Header="  First Name  " Binding="{Binding firstName}"/>
+                    <DataGridTextColumn Header="  Last Name  " Binding="{Binding lastName}"/>
+                    <DataGridTextColumn Header="  Birthday: Year " Binding="{Binding yearBorn}"/>
+                    <DataGridTextColumn Header=" Month " Binding="{Binding monthBorn}"/>
+                    <DataGridTextColumn Header=" Day  " Binding="{Binding dayBorn}"/>
+                    <DataGridTextColumn Header="  Email Address  " Binding="{Binding email}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
